--- a/TestAppForUI/View/StartPage.xaml
+++ b/TestAppForUI/View/StartPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:cake="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:cake="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView" xmlns:customrenderers="clr-namespace:TestAppForUI.CustomRenderers"
              mc:Ignorable="d"
              x:Class="TestAppForUI.View.StartPage"
              BackgroundColor="#791AE5">
@@ -18,7 +18,7 @@
                     <Image Source="iconSitting.png" WidthRequest="200" Aspect="AspectFit"  HorizontalOptions="End" HeightRequest="200"/>
                 </StackLayout>
                 <cake:PancakeView BorderThickness="1" CornerRadius="30">
-                    <Entry Placeholder="Search Here" />
+                    <customrenderers:BorderLessEntry Placeholder="Search Here" />
                 </cake:PancakeView>
             </StackLayout>
             <cake:PancakeView BackgroundColor="White" CornerRadius="10, 10, 0, 0" VerticalOptions="FillAndExpand">
